--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,7 +30,8 @@ jobs:
       uses: docker/build-push-action@v6
       with:
           push: true
-          context: python-app
+          context: ./python-app
+          file: ./python-app/Dockerfile
           tags: user/app:latest
       
     
