--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,19 +19,35 @@ jobs:
     - name: Setup docker buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Login to GitHub Container Registry
+    # - name: Login to GitHub Container Registry
+    #   uses: docker/login-action@v3
+    #   with:
+    #       registry: ghcr.io
+    #       username: ${{ github.actor }}
+    #       password: ${{ secrets.GITHUB_TOKEN }}
+
+    # - name: Build and push
+    #   uses: docker/build-push-action@v6
+    #   with:
+    #       push: true
+    #       context: ./python-app
+    #       file: ./python-app/Dockerfile
+    #       tags: user/app:latest
+
+    
+    - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and push
+    - name: Build and Push Image
       uses: docker/build-push-action@v6
       with:
-          push: true
           context: ./python-app
           file: ./python-app/Dockerfile
-          tags: user/app:latest
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/app:latest
+
       
     
